--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
+  margin: 0;
+  background-color: aquamarine;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+#quote-container {
+  min-height: 10vh;
+  height: auto;
+  min-width: 300px;
+  max-width: 550px;
+  display: flex;
+  flex-flow: column wrap;
+  background-color: white;
+  justify-content: space-between;
+}
+
+#call-to-action {
+  min-height: 5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#text-container {
+  background-color: white;
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  flex-flow: row wrap;
+}
+
+#quote {
+  padding: 0.5em 2em 0.5em 2em;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+#author {
+  font-style: italic;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 0 7rem 1rem 0;
+  font-size: 1.5rem;
+}
+
+#quote-button {
+  background-color: rgb(0, 0, 238);
+  text-decoration: none;
+  border-style: none;
+  width: 7em;
+  height: 3em;
+  align-self: center;
+  font-size: 1em;
   color: white;
+  border-radius: 4;
 }
 
-.App-link {
-  color: #61dafb;
+#quote-button:hover {
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#twitter-icon {
+  height: 100%;
+  width: 100%;
+}
+
+a {
+  height: auto;
+  width: auto;
+  display: flex;
+  margin: 0%;
+  padding: 0%;
+  height: 3rem;
+  width: 3rem;
 }
