--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   align-items: center;
 }
 
-#quote-container {
+#quote-box {
   min-height: 10vh;
   height: auto;
   min-width: 300px;
@@ -33,7 +33,7 @@ body {
   flex-flow: row wrap;
 }
 
-#quote {
+#text {
   padding: 0.5em 2em 0.5em 2em;
   font-size: 2rem;
   font-weight: 600;
@@ -48,7 +48,7 @@ body {
   font-size: 1.5rem;
 }
 
-#quote-button {
+#new-quote {
   background-color: rgb(0, 0, 238);
   text-decoration: none;
   border-style: none;
